bug-61797: "license text" area is too small. Width value has been moved to styles.css file.

--- a/webui/src/main/webapp/VAADIN/themes/mytheme/styles.css
+++ b/webui/src/main/webapp/VAADIN/themes/mytheme/styles.css
@@ -82,3 +82,7 @@
     padding-left: 0;
     padding-top: 0;
 }
+
+.licenseArea {
+    width: 275px;
+}
